fixed horizontal scrollbar problem

--- a/src/app/hero-section/hero-section.component.scss
+++ b/src/app/hero-section/hero-section.component.scss
@@ -2,7 +2,9 @@
 @import "../styles/_shared-sections";
 
 .hero-page{
-    height: 500px;
+    //height: 500px;
+    margin-right: 0px !important;
+    margin-left: 0px !important;
 }
 .mmlogo{
     margin-top: auto;
