--- a/src/app/top-nav/top-nav.component.scss
+++ b/src/app/top-nav/top-nav.component.scss
@@ -93,6 +93,8 @@
     background-color: $primary-3;
     color: $my-white !important;
     border-bottom: solid 2px #16ade3;
+    //fix row overflow
+    margin: 0;
 }
 
 .my-nav-expand-button{
